# threads

./: .gitignore  CMakeLists.txt  MyTests.h  ServiceDiagram.xml  avl.h  openmpthreads.cpp  stack.h  testsuit.h  tree.cpp  tree.h  treethreads.cpp  Параллельные вычисления.docx
